--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.0",
     "nodemailer": "^6.9.1",
     "sequelize": "^6.31.1"
