--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "brcypt": "^1.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.0",
     "nodemailer": "^6.9.1",
